welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:4: error: ';' expected but 'else' found.
  else if(isCarryingBaggle()){
  ^