welcome.lessons.welcome.summative.Moria.scala.code
while(getGroundColor() != Color.GREEN){
  if(isFacingWall())
    right(); forward(); left(); forward()
  else if(isCarryingBaggle()){
    forward()
    if(isOverBaggle())
    	back(); forward(); dropBaggle()
  }
  else{
    forward()
    if(isOverBaggle())
    	pickupBaggle(); back()
  }
}